--- a/.github/workflows/s3-deploy.yml
+++ b/.github/workflows/s3-deploy.yml
@@ -1,10 +1,9 @@
-
-name: Deploy Static Website to S3
+name: Deploy Static Website to S3 and Invalidate CloudFront
 
 on:
   push:
     branches:
-      - main  # or your default branch
+      - main
 
 jobs:
   deploy:
@@ -19,8 +18,16 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # Change to your bucket's region
+          aws-region: us-east-1
 
-      - name: Sync files to S3 bucket
+      - name: Sync website files to S3 bucket
         run: |
-          aws s3 sync ./website s3://your-bucket-name --delete
+          echo "Syncing files to S3 bucket: my-web-app-ctb"
+          aws s3 sync ./website s3://my-web-app-ctb --delete
+          echo "S3 sync complete."
+
+      - name: Invalidate CloudFront Cache
+        run: |
+          DISTRIBUTION_ID=YOUR_CLOUDFRONT_DISTRIBUTION_ID
+          echo "Creating CloudFront invalidation for distribution $DISTRIBUTION_ID"
+          aws cloudfront create-invalidation -
